--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,363 @@
-.consectetur {
-	/* font-family: 'Big Caslon' serif; */
-	/* font-family: 'Impact', sans-serif; */
-	/* font-family: monospace; */
-	/* font-family: cursive; */
-	/* font-family: fantasy; */
-	/* max-width: 1200px; */
-	/* width: 100px; */
-	/* margin-left: auto; */
-	/* margin-right: auto; */
+html {
+	box-sizing: border-box;
+	height: 100%;
+	scroll-behavior: smooth;
+}
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+body {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	font-family: 'Roboto', 'Arial', sans-serif;
+	color: #000;
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
+	line-height: 1.5;
+	font-weight: 400;
+	letter-spacing: 0.5px;
+}
+*:focus {
+	outline: 2px dotted #ff7500;
+	outline-offset: 3px;
+}
+
+.container {
+	width: 100%;
+	max-width: 1148px;
+	margin: 0 auto;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.btn {
+	border: none;
+	padding: 12px 24px;
+	background-color: #ff7500;
+	color: #fff;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: opacity 0.4s ease;
+}
+
+.btn:hover {
+	opacity: 0.8;
+}
+
+.btn:active {
+	opacity: 0.6;
+}
+
+/* site-header */
+.site-header {
+	padding-top: 16px;
+	padding-bottom: 16px;
+	border-top: 5px solid #ff7500;
+}
+
+.site-header__container {
+	display: flex;
+	align-items: center;
+}
+
+.site-logo-link {
+	margin-right: auto;
+	transition: opacity 0.4s ease;
+}
+
+.site-logo-link:hover {
+	opacity: 0.8;
+}
+
+.site-logo-link:active {
+	opacity: 0.6;
+}
+
+.site-nav {
+	margin-right: 32px;
+}
+
+.site-nav__list {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	list-style: none;
+}
+
+.site-nav__item:not(:last-child) {
+	margin-right: 32px;
+}
+
+.site-nav__link {
+	text-decoration: none;
+	color: #000;
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 1.17;
+	letter-spacing: 1px;
+	transition: all 0.4s ease;
+}
+
+.site-nav__link:hover {
+	color: #ff7500;
+}
+
+.site-nav__link:active {
+	opacity: 0.6;
+}
+
+.site-nav__link--active {
+	border-bottom: 3px solid #ff7500;
+}
+
+p::selection {
+	background-color: red;
+	color: gold;
+}
+
+.hero {
+	margin-bottom: 147px;
+	background-color: black;
+	color: white;
+	padding-top: 80px;
+	padding-bottom: 80px;
+}
+
+.hero-container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.hero-info {
+	max-width: 387px;
+	width: 100%;
+}
+
+.hero-line {
+	display: inline-block;
+	width: 80px;
+	height: 3px;
+	background-color: orange;
+	margin-bottom: 40px;
+}
+
+.hero-title {
+	margin-top: 0;
+	margin-bottom: 24px;
+	font-weight: 700;
+	font-size: 40px;
+	letter-spacing: 0.5px;
+	line-height: 1.2;
+}
+
+.hero-text {
+	margin-top: 0;
+	margin-bottom: 32px;
+}
+
+.hero-img-wrapper img {
+	width: 510;
+	height: 510;
+	object-fit: cover;
+	border-radius: 8px;
+}
+
+.main-info {
+	margin-bottom: 245px;
+}
+
+.main-info-line {
+	width: 80px;
+	height: 3px;
+	background-color: #ff7500;
+	display: inline-block;
+	margin-bottom: 24px;
+}
+
+.main-info-title {
+	margin-top: 0;
+	margin-bottom: 72px;
+	font-weight: 700;
+	font-style: 72px;
+	line-height: 1.2;
+	letter-spacing: 0.5px;
+	min-width: 435px;
+	width: 100%;
+}
+
+.main-info-list {
+	display: flex;
+	list-style: none;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+}
+
+.main-info-item {
+	min-width: 340px;
+	width: 100%;
+}
+
+.main-info-item:not(:last-child) {
+	margin-right: 40px;
+}
+
+.main-info-icon {
+	width: 100px;
+	height: 100px;
+	background-color: rgba(255, 117, 0, 0.2);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	margin-bottom: 32px;
+}
+
+.main-info-item-title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.2;
+	letter-spacing: 0.5px;
+	margin-top: 0;
+	margin-bottom: 12px;
+}
+
+.main-info-item-text {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.site-main {
+	padding-bottom: 160px;
+}
+
+.promo-container {
+	background-color: #252420;
+	padding-top: 64px;
+	padding-bottom: 64px;
+	padding-left: 64px;
+	color: #fff;
+	border-radius: 12px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.promo-info {
+	min-width: 440px;
+	width: 100%;
+}
+
+.promo-heading {
+	margin-top: 0;
+	margin-bottom: 24px;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 1.2;
+	letter-spacing: 0.5px;
+}
+
+.promo-text {
+	margin-top: 0;
+	margin-bottom: 12px;
+}
+
+.promo-text2 {
+	margin-top: 0;
+	margin-bottom: 24px;
+}
+
+.promo-span {
+	color: #ff7500;
+	font-weight: 700;
+}
+
+.promo-img-wrapper img {
+	width: 440px;
+	height: 440px;
+	border-radius: 12px;
+}
+
+.site-footer {
+	background-color: #f8f8f8;
+	padding-top: 56px;
+	padding-bottom: 56px;
+}
+
+.site-footer-top {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.site-footer-top-list {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.site-footer-top-item:not(:last-child) {
+	margin-right: 16px;
+}
+
+.site-footer-top-link {
+	color: #252420;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.site-footer-top-link svg:hover {
+	color: #ff7500;
+}
+
+.site-footer-top-link svg {
+	transition: all 0.4s ease;
+}
+
+.site-footer-line {
+	height: 2px;
+	background-color: rgba(255, 117, 0, 0.2);
+	margin-top: 40px;
+	margin-bottom: 64px;
+}
+
+.site-footer-top-link svg:active {
+	opacity: 0.6;
+}
+
+.site-footer-bottom {
+	display: flex;
+	justify-content: space-between;
+}
+
+.site-footer-bottom-list {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.site-footer-bottom-item:not(:last-child) {
+	margin-bottom: 16px;
+}
+
+.site-footer-bottom-link {
+	text-decoration: none;
+	color: #252420;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.2;
+}
+
+.site-footer-bottom-link:hover {
+	color: #ff7500;
 }
